my profile page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container" id="page-content">
 
     <div class="card text-center" id="summary">
-      <img src="../../images/profile_pic.jpg" alt="George Costanza" id="img-profile" class="img-circle">
+      <img src="images/profile_pic.jpg" alt="George Costanza" id="img-profile" class="img-circle">
       <h1>George Costanza</h1>
       <h2>CEO at Vandelay Industries</h2>
       <p>
@@ -54,7 +54,7 @@
         <tbody>
           <tr>
             <td>
-                <img src="../../images/home_alone.jpg" alt="home alone">
+                <img src="images/home_alone.jpg" alt="home alone">
             </td>
             <td>
                 <h3>1990 - Home Alone</h3>
@@ -63,7 +63,7 @@
           </tr>
           <tr>
             <td>
-                <img src="../../images/wrath_of_khan.jpg" alt="star trek">
+                <img src="images/wrath_of_khan.jpg" alt="star trek">
             </td>
             <td>
                 <h3>1982 - Star Trek II: The Wrath of Khan</h3>
@@ -72,7 +72,7 @@
           </tr>
           <tr>
             <td>
-                <img src="../../images/breakfast_at_tiffanys.jpg" alt="breakfast at tiffanys">
+                <img src="images/breakfast_at_tiffanys.jpg" alt="breakfast at tiffanys">
             </td>
             <td>
                 <h3>1961 - Breakfast at Tiffany's</h3>
